hydroflow/tests/compile-fail/surface_port_conflict.stderr
error: Output connection conflicts with below ($DIR/tests/compile-fail/surface_port_conflict.rs:7:11)
 --> tests/compile-fail/surface_port_conflict.rs:6:11
  |
6 |         t[1] -> for_each(std::mem::drop);
  |           ^

error: Output connection conflicts with above ($DIR/tests/compile-fail/surface_port_conflict.rs:6:11)
 --> tests/compile-fail/surface_port_conflict.rs:7:11
  |
7 |         t[1] -> for_each(std::mem::drop);
  |           ^
